# playground

./: README.md
erlang/: factorial.erl  fib.erl  fizzbuzz.erl  qsort.erl
golang/: fib.go
python/algos/: btree.py  btree_test.py  cetrality_interview.py  dropped_requests_hackerrank.py  fib.py  fib_test.py  hogarth.py  qsort.py  qsort_test.py  traverse.py
python/algos/canonical/: data4.py  exercise.py  exercise_tests.py
python/misc/: anagram.py  baml_q.py  cf_partners.py  factorial.py  fizzbuzz.py  fizzbuzz2.py  monty_hall.py  mro.py  new_old_classes.py  nums_in_col.py  operators.py  params.py  prop.py  sum.py  wraps.py
rust/: Cargo.toml  fib.rs
rust/src/: borrow_and_move.rs  fizzbuzz.rs  hello_world.rs  interview_qs.rs  lib.rs  linked_list.rs  move_twice.rs  peaks_and_valleys.rs  variance.rs
rust/src/acala/: as_per_spec.rs  improved_impl.rs  mod.rs
rust/src/enjin/: ex1.rs  ex2.rs  ex3.rs  ex4.rs  mod.rs
scala/: build.sbt
scala/src/main/scala/ee/: Fizzbuzz.scala  InterestService.scala
scala/src/main/scala/langfeatures/: CalcService.scala  Cases.scala  Cmd.scala  Enums.scala  HelloActor.scala  PartFunction.scala  Sorter.scala
scala/src/main/scala/patterns/: ConnFSM.scala  LL.scala  LLSimple.scala  Tree.scala  Variance.scala  package.scala
scala/src/test/scala/ee/: FizzbuzzTest.scala  InterestServiceTest.scala
scala/src/test/scala/langfeatures/: CalcServiceTest.scala
scala/src/test/scala/patterns/: CmdTest.scala  ConnFSMTest.scala  LLTest.scala  LangFeaturesTest.scala  SorterTest.scala  TreeTest.scala
(+9 files in other folders)
