[package]
name = "excercises"
version = "0.1.0"
authors = ["Konrad Sosnowski <konrad.sosnowski@ubnt.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
itertools = "0.10.0"
regex = "1.4.5"

[[bin]]
name = "enjin_ex1"
path = "src/enjin/ex1.rs"

[[bin]]
name = "enjin_ex2"
path = "src/enjin/ex2.rs"

[[bin]]
name = "enjin_ex3"
path = "src/enjin/ex3.rs"

[[bin]]
name = "enjin_ex4"
path = "src/enjin/ex4.rs"
